@@ -18,6 +18,8 @@ Version 3  ???
 --Fixed server bug that caused paintings to disappear from circulation when 
   family members killed but vault not reached.
 
+--Server prevents a dual-client setup from keeping robber's own house checked out for edit during robbery and other non-edit actions.
+
 
 
 Version 2    2013-February-27    (private pre-alpha)
